syntax = "proto3";
package ReactRender;

message Metadata {
  string reqId = 1;
}

message ReqMessage {
  string data = 1;
  Metadata metadata = 2;
}

message ResMessage {
  string hmtl = 1;
}

service RenderingEngine {
  rpc RenderPage(ReqMessage) returns (ResMessage) {}
}